[gd_scene load_steps=42 format=3 uid="uid://b5mwjua8h0kh5"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_cmijl"]
[ext_resource type="PackedScene" uid="uid://bblskvyrmiilj" path="res://scenes/subsystems/health/health.tscn" id="2_3q7o3"]
[ext_resource type="PackedScene" uid="uid://ck5m45n6q1rtc" path="res://scenes/subsystems/hitbox/hitbox.tscn" id="2_a6k1e"]
[ext_resource type="Texture2D" uid="uid://51opbmocllve" path="res://assets/player.png" id="2_vdrbk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1784y"]
size = Vector2(11, 8)

[sub_resource type="Animation" id="Animation_hndu1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AttackUpCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/AttackDownCollision:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Area2D/AttackLeftCollision:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Area2D/AttackRightCollision:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ab5uc"]
resource_name = "attack down"
length = 0.32
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/AttackDownCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.32),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_aa2s1"]
resource_name = "attack_left"
length = 0.32
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AttackLeftCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.32),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_ifiyd"]
resource_name = "attack_right"
length = 0.32
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/AttackRightCollision:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.32),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_oj35a"]
resource_name = "attack_up"
length = 0.32
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/AttackUpCollision:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.32),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_1vyqo"]
resource_name = "idle_down"
length = 0.52
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_i0dp7"]
resource_name = "idle_left"
length = 0.52
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tldjo"]
resource_name = "idle_up"
length = 0.52
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1qyqq"]
resource_name = "idle_up"
length = 0.54
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}

[sub_resource type="Animation" id="Animation_1i3sd"]
resource_name = "walk_down"
length = 0.52
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_bkcfl"]
resource_name = "walk_left"
length = 0.52
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bgq3m"]
resource_name = "walk_right"
length = 0.52
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_wmfcr"]
resource_name = "walk_up"
length = 0.52
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_it7pp"]
_data = {
"RESET": SubResource("Animation_hndu1"),
"attack down": SubResource("Animation_ab5uc"),
"attack_left": SubResource("Animation_aa2s1"),
"attack_right": SubResource("Animation_ifiyd"),
"attack_up": SubResource("Animation_oj35a"),
"idle_down": SubResource("Animation_1vyqo"),
"idle_left": SubResource("Animation_i0dp7"),
"idle_right": SubResource("Animation_tldjo"),
"idle_up": SubResource("Animation_1qyqq"),
"walk_down": SubResource("Animation_1i3sd"),
"walk_left": SubResource("Animation_bkcfl"),
"walk_right": SubResource("Animation_bgq3m"),
"walk_up": SubResource("Animation_wmfcr")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_iagry"]
animation = &"attack_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o3dth"]
animation = &"attack_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_igw7d"]
animation = &"attack_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j5qeh"]
animation = &"attack down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_n850r"]
blend_point_0/node = SubResource("AnimationNodeAnimation_iagry")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_o3dth")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_igw7d")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_j5qeh")
blend_point_3/pos = Vector2(0, 1)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1vhl2"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1d5rh"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2nq6m"]
animation = &"idle_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_emt8t"]
animation = &"idle_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ktxdk"]
blend_point_0/node = SubResource("AnimationNodeAnimation_1vhl2")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_1d5rh")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_2nq6m")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_emt8t")
blend_point_3/pos = Vector2(0, 1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nmsym"]
animation = &"walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4weae"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r6kgb"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m6xbr"]
animation = &"walk_down"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_7onw5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nmsym")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_4weae")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_r6kgb")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_m6xbr")
blend_point_3/pos = Vector2(0, 1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_grcfm"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_alvjc"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5ntei"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s21ji"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cjxlo"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ktvd4"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_a0jt6"]
states/Attack/node = SubResource("AnimationNodeBlendSpace2D_n850r")
states/Attack/position = Vector2(411, 200)
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_ktxdk")
states/Idle/position = Vector2(402, 100)
states/Start/position = Vector2(153, 95)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_7onw5")
states/Walk/position = Vector2(605, 136)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_grcfm"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_alvjc"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_5ntei"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_s21ji"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_cjxlo"), "Walk", "Attack", SubResource("AnimationNodeStateMachineTransition_ktvd4")]
graph_offset = Vector2(9, 18)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_cmijl")

[node name="Hitbox" parent="." instance=ExtResource("2_a6k1e")]
position = Vector2(0.5, -4)

[node name="BodyCollisionShape2" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_1784y")

[node name="Health" parent="." instance=ExtResource("2_3q7o3")]
max_hp = 5

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -4)
shape = SubResource("RectangleShape2D_1784y")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -17)
texture = ExtResource("2_vdrbk")
flip_h = true
hframes = 6
vframes = 10

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
active = false
libraries = {
"": SubResource("AnimationLibrary_it7pp")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_it7pp")
}
tree_root = SubResource("AnimationNodeStateMachine_a0jt6")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = Vector2(-0.000772178, 0.0220264)
parameters/Idle/blend_position = Vector2(-0.000772178, 0.0484581)
parameters/Walk/blend_position = Vector2(0, 0)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="AttackRightCollision" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-16, -7, -16, -4, -2, 4, 9, 4, 15, 2, 18, -2, 18, -5, 12, -9, 7, -9, 7, -8, 10, -6, 9, -2, 3, 0, 0, 0, -12, -7)
disabled = true

[node name="AttackUpCollision" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(0, -17)
polygon = PackedVector2Array(-9, 9, -9, 3, -4, -2, 4, -2, 10, 4, 10, 7, 9, 7, 1, 3)
disabled = true

[node name="AttackLeftCollision" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-7, -9, -12, -9, -18, -5, -18, -2, -13, 3, -9, 4, 2, 4, 10, 1, 16, -5, 15, -6, 12, -6, 0, 1, -3, 1, -11, -3)
disabled = true

[node name="AttackDownCollision" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-2, -2)
polygon = PackedVector2Array(-10, 0, -9, 5, -4, 9, 4, 9, 9, 4, 9, -2, 2, 4, -5, 4)
disabled = true

[connection signal="hit" from="Hitbox" to="." method="_on_hitbox_hit"]
[connection signal="on_death" from="Health" to="." method="_on_health_on_death"]
[connection signal="on_health_updated" from="Health" to="." method="_on_health_on_health_updated"]
[connection signal="animation_finished" from="AnimationTree" to="." method="_on_animation_tree_animation_finished"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
